[package]
name = "watchr_filesystem"
version = "0.1.0"
description = "A simple file watcher that watches a list of paths and calls a callback when any of them change"
license = "MIT"
repository = "https://github.com/webdevcaptain/watchr"
edition = "2021"

[dependencies]
notify = "8.0.0"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
